Apache Tez Change Log
=====================

Release 0.8.3: Unreleased

INCOMPATIBLE CHANGES
  TEZ-3029. Add an onError method to service plugin contexts.

ALL CHANGES:
  TEZ-3173. Update Tez AM REST APIs for more information for each vertex.
  TEZ-3108. Add support for external services to local mode.
  TEZ-3189. Pre-warm dags should not be counted in submitted dags count by DAGAppMaster.
  TEZ-2967. Vertex start time should be that of first task start time in UI
  TEZ-3175. Add tez client submit host
  TEZ-3166. Fix a few cases where counters aren't fully updated and sent for failed tasks.
  TEZ-2958. Recovered TA, whose commit cannot be recovered, should move to killed state
  TEZ-2936. Create ATS implementation that enables support for YARN-4265 (ATS v1.5)
  TEZ-3148. Invalid event TA_TEZ_EVENT_UPDATE on TaskAttempt.
  TEZ-3105. TezMxBeanResourceCalculator does not work on IBM JDK 7 or 8 causing Tez failures.
  TEZ-3155. Support a way to submit DAGs to a session where the DAG plan exceeds hadoop ipc limits.
  TEZ-2863. Container, node, and logs not available in UI for tasks that fail to launch
  TEZ-3140. Reduce AM memory usage during serialization
  TEZ-2756. MergeManager close should not try merging files on close if invoked after a shuffle exception.
  TEZ-3156. Tez client keeps trying to talk to RM even if RM does not know about the application.
  TEZ-3115. Shuffle string handling adds significant memory overhead
  TEZ-3151. Expose DAG credentials to plugins.
  TEZ-3149. Tez-tools: Add username in DagInfo.
  TEZ-2988. DAGAppMaster::shutdownTezAM should return with a no-op if it has been invoked earlier.
  TEZ-3147. Intermediate mem-to-mem: Fix early exit when only one segment can fit into memory
  TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
  TEZ-3128. Avoid stopping containers on the AM shutdown thread.
  TEZ-3129. Tez task and task attempt UI needs application fails with NotFoundException